--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ name = "zero2prod"
 actix-web = "=4.0.0-beta.9"
 actix-http = "=3.0.0-beta.10"
 serde = { version = "1", features = ["derive"]}
+config = "0.11.0"
 
 [dependencies.sqlx]
 version = "0.5.7"
