--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,11 +27,12 @@ serde = { version = "1", features = ["derive"]}
 config = "0.11.0"
 uuid = { version = "0.8.1", features = ["v4"]}
 chrono = "0.4.15"
-tracing = { version = "0.1", features = ["log"] }
+tracing = "0.1.19"
 tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.1.6"
 tracing-log = "0.1.1"
+tracing-actix-web = "0.4.0-beta.12"
 
 [dependencies.sqlx]
 version = "0.5.7"
