--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,11 @@ tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"]
 tracing-bunyan-formatter = "0.1.6"
 tracing-log = "0.1.1"
 tracing-actix-web = "0.4.0-beta.12"
+serde-aux = "1.0.1"
+log = "0.4"
 
 [dependencies.sqlx]
-version = "0.5.7"
+version = "0.5.5"
 default-features = false
 features = [
     "runtime-actix-rustls",
