--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ tracing-log = "0.1.1"
 tracing-actix-web = "0.4.0-beta.12"
 serde-aux = "1.0.1"
 log = "0.4"
+unicode-segmentation = "1.7.1"
 
 [dependencies.sqlx]
 version = "0.5.5"
@@ -54,3 +55,4 @@ actix-rt = "2.0.2"
 reqwest = "0.11"
 tokio = "1"
 once_cell = "1.7.2"
+claim = "0.4.0"
