--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ tracing-actix-web = "0.4.0-beta.12"
 serde-aux = "1.0.1"
 log = "0.4"
 unicode-segmentation = "1.7.1"
+validator = "0.12.0"
+
 
 [dependencies.sqlx]
 version = "0.5.5"
@@ -56,3 +58,9 @@ reqwest = "0.11"
 tokio = "1"
 once_cell = "1.7.2"
 claim = "0.4.0"
+# We are not using fake >= 2.4 because it relies on rand 0.8
+# which has been recently released and it is not yet used by
+# quickcheck (solved in its upcoming 1.0 release!)
+fake = "~2.3"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
