--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ serde-aux = "1.0.1"
 log = "0.4"
 unicode-segmentation = "1.7.1"
 validator = "0.12.0"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 
 
 [dependencies.sqlx]
@@ -54,7 +55,6 @@ features = [
 
 [dev-dependencies]
 actix-rt = "2.0.2"
-reqwest = "0.11"
 tokio = "1"
 once_cell = "1.7.2"
 claim = "0.4.0"
