--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ features = [
 
 [dev-dependencies]
 actix-rt = "2.0.2"
-tokio = "1"
+tokio = { version = "1", features = ["rt", "macros"] }
 once_cell = "1.7.2"
 claim = "0.4.0"
 # We are not using fake >= 2.4 because it relies on rand 0.8
@@ -64,3 +64,5 @@ claim = "0.4.0"
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+wiremock = "0.5"
+serde_json = "1"
